--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.5.2",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
